...
        android:layout_marginTop="44dp"
        android:text="Phone Number"
        android:textColor="@color/texts"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24" />

    <TextView
        android:drawableStart="@drawable/ic_email"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
...
